Add basic framework / code, start writing validation awesomeness

--- a/design/layouts/_header.haml
+++ b/design/layouts/_header.haml
@@ -8,6 +8,6 @@
     %li= link_to 'Newest Posts', '#'
     %li= pending_link 'Trending Posts'
     %li= link_to 'Your Favourite Posts', '#'
-    %li= link_to 'Submit a Post', '#'
+    %li= link_to 'Submit a Blog', '#'
   
   
