--- a/design/content/index.haml
+++ b/design/content/index.haml
@@ -4,60 +4,12 @@
   but with added bonuses like community voting and badges.
   %a{:href => "#"} Submit your blog 
   to get a chance to build your reputation as a respected ruby blogger among fellow rubyists.
+  = link_to '(hide)', '#', :id => 'hide-introduction'
 
-%ul#top-stories
-
-  %li.story
-    %h3= link_to 'Some Simple Blog Title Here', '#'
-    .story-summary
-      %p Stop! Don't shoot fire stick in space canoe! Cause explosive decompression! Fry! Quit doing the right thing, you jerk! No, just a regular mistake. We can't compete with Mom! Her company is big and evil! Ours is small and neutral!
-    %p.story-liked-by
-      This posted has been liked by
-      == #{link_to "Bob", "#"}, #{link_to "Bill", "#"} and #{link_to "Steve", "#"}.
-
-    %dl.story-metadata
-      %dt.favourites Favourites:
-      %dd.favourites 3
-      %dt.up-votes Up Votes:
-      %dd.up-votes 12
-      %dt.down-votes Down Votes:
-      %dd.down-votes 3
-      %dt.ranking Post Ranking:
-      %dd.ranking 1
-    
-  %li.story
-    %h3= link_to 'Some Simple Blog Title Here', '#'
-    .story-summary
-      %p Stop! Don't shoot fire stick in space canoe! Cause explosive decompression! Fry! Quit doing the right thing, you jerk! No, just a regular mistake. We can't compete with Mom! Her company is big and evil! Ours is small and neutral!
-    %p.story-liked-by
-      This posted has been liked by
-      == #{link_to "Bob", "#"}, #{link_to "Bill", "#"} and #{link_to "Steve", "#"}.
-
-    %dl.story-metadata
-      %dt.favourites Favourites:
-      %dd.favourites 3
-      %dt.up-votes Up Votes:
-      %dd.up-votes 12
-      %dt.down-votes Down Votes:
-      %dd.down-votes 3
-      %dt.ranking Post Ranking:
-      %dd.ranking 1
-  
-  
-  %li.story
-    %h3= link_to 'Some Simple Blog Title Here', '#'
-    .story-summary
-      %p Stop! Don't shoot fire stick in space canoe! Cause explosive decompression! Fry! Quit doing the right thing, you jerk! No, just a regular mistake. We can't compete with Mom! Her company is big and evil! Ours is small and neutral!
-    %p.story-liked-by
-      This posted has been liked by
-      == #{link_to "Bob", "#"}, #{link_to "Bill", "#"} and #{link_to "Steve", "#"}.
-
-    %dl.story-metadata
-      %dt.favourites Favourites:
-      %dd.favourites 3
-      %dt.up-votes Up Votes:
-      %dd.up-votes 12
-      %dt.down-votes Down Votes:
-      %dd.down-votes 3
-      %dt.ranking Post Ranking:
-      %dd.ranking 1
+%ul.stories#top-stories
+  - 5.times do
+    = render 'mock_story'
+      
+#pagination
+  = pending_link "&laquo; Older Posts", '#',  :class => 'older-posts'
+  = pending_link "Newer Posts &raquo;", '#',  :class => 'newer-posts'
