--- a/design/layouts/rubyocracy.haml
+++ b/design/layouts/rubyocracy.haml
@@ -3,9 +3,9 @@
   %head
     %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }
     %title== #{@item[:title]} | Rubyocracy
-    %link{:rel => "stylesheet", :type => "text/css", :media => "screen", :href => "/style/rubyocracy.css"}
+    %link{:rel => "stylesheet", :type => "text/css", :media => "screen", :href => "./style/rubyocracy.css"}
     %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
-    %script{:type => "text/javascript", :src => "/javascripts/rubyocracy.js"}
+    %script{:type => "text/javascript", :src => "./javascripts/rubyocracy.js"}
   %body
     = render '_header'
     #container
