--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -8,7 +8,7 @@
   %p#footer-summary
     Rubyocracy - A project of CITS4230 Group F. All Rights Reserved. Site copyright 2010 onwards.
     %br
-    = pending_link "Contact Us"
+    = "Contact Us"
     if you have any questions.
     %br
     %a{:href => "http://jigsaw.w3.org/css-validator/check/referer"}
