--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -3,11 +3,11 @@
     %h1= link_to 'Rubyocracy', './index.html'
     %ul#header-primary-navigation
       %li= link_to 'Your Profile', './profile.html'
-      %li= pending_link 'Sign Out'
+      %li= 'Sign Out'
     .clearfix
   %ul#header-secondary-navigation
     %li= link_to 'Latest Posts', './index.html'
-    %li= pending_link 'Trending Posts'
+    %li= 'Trending Posts'
     %li= link_to 'Your Favourite Posts', './favourites.html'
     %li= link_to 'Submit a Blog', './submit.html'
   
