--- a/app/views/layouts/rubyocracy.haml
+++ b/app/views/layouts/rubyocracy.haml
@@ -2,12 +2,15 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
     %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }
-    %title== #{@item[:title]} | Rubyocracy
-    %link{:rel => "stylesheet", :type => "text/css", :media => "screen", :href => "./style/rubyocracy.css"}
+    - if !@item.nil?
+      %title== #{@item[:title]} 
+    - else
+      %title='Not defined'
+    %link{:rel => "stylesheet", :type => "text/css", :media => "screen", :href => "style/rubyocracy.css"}
     %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
-    %script{:type => "text/javascript", :src => "./javascripts/rubyocracy.js"}
+    %script{:type => "text/javascript", :src => "javascripts/rubyocracy.js"}
   %body
-    = render '_header'
+    = render 'layouts/header.haml'
     #container
       #content= yield
-      = render '_footer'
+      = render 'layouts/footer.haml'
