--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,6 +1,6 @@
 #header
   #inner-header
-    %h1= link_to 'Rubyocracy', './index.html'
+    %h1= link_to 'Rubyocracy', root_path
     %ul#header-primary-navigation
       - if user_signed_in?
         %li= link_to "Your Profile", '#'
@@ -10,8 +10,8 @@
         %li= link_to "Sign in", new_user_session_path
     .clearfix
   %ul#header-secondary-navigation
-    %li= link_to 'Latest Posts', './index.html'
+    %li= link_to 'Latest Posts', root_path
     %li= 'Trending Posts'
     %li= link_to 'Your Favourite Posts', './favourites.html'
-    %li= link_to 'Submit a Blog', './submit.html'
+    %li= link_to 'Submit a Blog', new_site_path
   
