Added pagination to the list views

--- a/app/views/rubyocracy/index.html.haml
+++ b/app/views/rubyocracy/index.html.haml
@@ -12,5 +12,4 @@
   
       
 #pagination
--#  = pending_link "&laquo; Older Posts", '#',  :class => 'older-posts'
--#  = pending_link "Newer Posts &raquo;", '#',  :class => 'newer-posts'
+  = will_paginate @stories
