--- a/app/views/stories/_story.html.haml
+++ b/app/views/stories/_story.html.haml
@@ -10,8 +10,7 @@
     %br.clear
     .story-preview= linked_screenshot story
     .story-nested-details
-      .story-summary
-        %p Something here
+      .story-summary= abstract_for story
       .story-meta-container
         %p.story-meta
           Posted on
