--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -1,11 +1,14 @@
-%h2 Stories on Rubyocracy
+%h2 Latest Posts on Rubyocracy
 
-= link_to 'Submit your blog', new_site_path
+- if show_welcome_notice?
+  %p#rubyocracy-introduction
+    Rubyocracy is a community powered news site for Ruby developers. Think of it like a blog aggregator
+    but with added bonuses like community voting and badges.
+    = link_to 'Submit your blog', new_site_path
+    to get a chance to build your reputation as a respected ruby blogger among fellow rubyists.
+    = link_to '(hide)', '#', :id => 'hide-introduction'
 
-%ul.stories#top-stories= render :partial => 'stories/story.html.haml', :collection => @stories
+%ul.stories#top-stories= render :partial => 'stories/story', :collection => @stories
   
       
-#pagination
-  = will_paginate @stories
-
-
+#pagination= will_paginate @stories
