--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -1,44 +1,17 @@
-%h2= @story[:title]
 
-#story
-  .story-inner
-    .story-preview
-      %a{:href => "#", :onclick => "alert('On the real site, this will go to the blog post.'); return false;"}
-        %img{:src => "./images/site.png", :alt => 'Some Simple Blog Title Here'}
-    .story-nested-details
-      .story-summary
-        %p= ''
-      .story-meta-container
-        %p.story-meta
-          Posted on
-          = link_to "Some Users Blog", "#", :class => 'story-origin-link'
-          about <span class='story-posted-at'>10 hours ago</span>.
-        %p.story-favourites
-          Favourited by
-          %span.story-faved-count 3 people
-          \-
-          = link_to "Favourite Story", "./favourites.html", :class => 'story-favourite'
-  %br.clear
-  %p#story-meta
-    = link_to 'This story has 12 comments', '#comments', :class => 'story-meta-comments'
-    \-
-    %span.story-vote
-      = link_to "I Liked it", "#", :class => 'story-up-vote'
-      or
-      = link_to "I didn't like it", "#", :class => 'story-down-vote'
-  .clearfix
+= render :partial => 'stories/story', :member => @story
 
 %a{:id => "comments"}
 #story-comments
   %h4 Comments on This Story
   
   %ul#comment-listing
-    - 1.upto(5) do |index|
+    - @story.comments.each_with_index do |comment, index|
       %li{:class => "comment"}
-        %p= ''
+        %p= comment.comment
         .comment-metadata
           Comment by
-          = link_to "Random User ##{index}", "#", :class => 'comment-author'
+          = link_to "#{comment.user.name}", comment.user, :class => 'comment-author'
           about
           %span.comment-posted-at== #{index * 2} minutes ago
   
