--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -13,7 +13,7 @@
           Comment by
           = link_to "#{comment.user.name}", comment.user, :class => 'comment-author'
           about
-          %span.comment-posted-at== #{index * 2} minutes ago
+          %span.comment-posted-at== #{Time.now - comment.created_at} minutes ago
   
   %form#story-add-comment{:action => "#", :method => "get"}
     %fieldset
