--- a/public/stylesheets/rubyocracy.css
+++ b/public/stylesheets/rubyocracy.css
@@ -67,6 +67,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
 }
 
+h5 {
+  font-weight: bold;
+}
+
 p {
   line-height: 1.5em;
 }
