--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -6,15 +6,11 @@
   %h4 Comments on This Story
   
   %ul#comment-listing
-    - @story.comments.each_with_index do |comment, index|
+    #pagination= will_paginate @story_comments
+    - @story_comments.each_with_index do |comment, index|
       %li{:class => "comment"}
-        %h5= comment.title
-        %p= comment.comment
-        .comment-metadata
-          Comment by
-          = link_to "#{comment.user}", comment.user, :class => 'comment-author'
-          about
-          %span.comment-posted-at== #{Time.now - comment.created_at} minutes ago
+        = render :partial => 'comments/comment', :locals => {:comment => comment }
+    #pagination= will_paginate @story_comments
   
   - if user_signed_in?
     = render :partial => 'comments/form', :locals => { :commentable => @story }
