Add like and favourites to the application.

--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -1,5 +1,5 @@
 
-= render :partial => 'stories/story', :locals => {:story => @story}
+= render :partial => 'stories/story', :locals => {:story => @story, :full => true}
 
 %a{:id => "comments"}
 #story-comments
