--- a/app/views/stories/_story.html.haml
+++ b/app/views/stories/_story.html.haml
@@ -3,14 +3,11 @@
     %h3
       = link_to story.title, [story.site, story], :class => 'story-title'
     -# = link_to '12 comments', './story.html#comments', :class => 'story-comments'
-    .story-vote
-      = link_to "I Liked it", "#", :class => 'story-up-vote'
-      or
-      = link_to "I didn't like it", "#", :class => 'story-down-vote'
+    .story-vote= story_liked_info story
     %br.clear
     .story-preview= linked_screenshot story
     .story-nested-details
-      .story-summary= abstract_for story
+      .story-summary= (defined?(full) && full) ? story.content.html_safe : abstract_for(story)
       .story-meta-container
         %p.story-meta
           Posted on
@@ -18,8 +15,8 @@
           about <span class='story-posted-at'>#{time_ago_in_words story.posted_at} ago</span>.
         %p.story-favourites
           Favourited by
-          %span.story-faved-count 3 people
-          \-
-          = link_to "Favourite Story", "./favourites.html", :class => 'story-favourite'
+          %span.story-faved-count= pluralize story.favorites.size, 'person'
+          - if user_signed_in?
+            == - #{story_favourited_link story}
         .clearfix
   .clearfix
