--- a/app/views/members/show.haml
+++ b/app/views/members/show.haml
@@ -3,7 +3,9 @@
 - else
   %h2 Profile
 
-= link_to "Comments", list_comments_by_user_path(@user)
-= link_to "Sites", list_sites_by_user_path(@user)
-= link_to "Favorites", list_favorites_by_user_path(@user)
+#header
+  %ul#header-secondary-navigation
+    %li= link_to "Comments", list_comments_by_user_path(@user)
+    %li= link_to "Sites", list_sites_by_user_path(@user)
+    %li= link_to "Favorites", list_favorites_by_user_path(@user)
 
