--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,7 +3,7 @@
     %li= link_to 'Home', root_path
     - if user_signed_in?
       %li= link_to 'Your Profile', member_path(current_user) 
-    %li= link_to 'Your Favourites', './favourites.html'
+      %li= link_to 'Your Favourites', list_favorites_by_user_path(current_user)
   %p#footer-summary
     Rubyocracy - A project of CITS4230 Group F. All Rights Reserved. Site copyright 2010 onwards.
     %br
