Couple of fixes, comments post redirect was broken

--- a/app/views/favorites/_favorite.haml
+++ b/app/views/favorites/_favorite.haml
@@ -4,6 +4,7 @@
       = link_to favorite.title, favorite.url, :class => 'story-title'
     %br.clear
     .story-nested-details
+      = link_to "Comments", [favorite.site, favorite]
       .story-meta-container
         %p.story-meta
           Favorited at
