--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,11 +1,12 @@
-%h5= h(comment.title)
+%h5= link_to h(comment.title), [comment.commentable_type.classify.constantize.find(comment.commentable_id).site, comment.commentable_type.classify.constantize.find(comment.commentable_id)]
 %p= h(comment.comment)
 .comment-metadata
   Comment by
   - if !comment.user.nil?
-    = link_to h("#{comment.user.id}"), member_path(comment.user), :class => 'comment-author'
+    = link_to h("#{comment.user.name}"), member_path(comment.user), :class => 'comment-author'
   - else
     = link_to "Anonymous", "#", :class => 'comment-author'
   about
   %span.comment-posted-at== #{time_ago_in_words(comment.created_at)} ago
+%br
 
