--- a/app/views/members/sites.haml
+++ b/app/views/members/sites.haml
@@ -1,7 +1,7 @@
 - if current_user.id == @user
   %h2 Your Sites
 - else
-  %h2 Users Sites
+  %h2= h("#{@user.name.pluralize}  Sites")
 
 %h5 All Sites
 %ul.stories#top-stories= render :partial => 'sites/site', :collection => @sites
