--- a/app/views/sites/_site.haml
+++ b/app/views/sites/_site.haml
@@ -1,7 +1,7 @@
 %li.story{:class => (@last_child ? "last" : nil)}
   .story-inner
     %h3
-      = link_to site.name, site.url, :class => 'story-title'
+      = link_to h(site.name), site.url, :class => 'story-title'
     %br.clear
     .story-nested-details
       .story-meta-container
