--- a/app/views/members/sites.haml
+++ b/app/views/members/sites.haml
@@ -1,12 +1,9 @@
-- if current_user.id == @user
+- if current_user == @user
   %h2 Your Sites
 - else
-  %h2= h("#{@user.name.pluralize}  Sites")
-
-%h5 All Sites
+  %h2 #{h @user.display_name}'s Sites
 %ul.stories#top-stories= render :partial => 'sites/site', :collection => @sites
 - if @sites.empty?
-  %br
-  %h4 There are no sites.
+  %p.empty This user currently has no sites.
 #pagination= will_paginate @sites
 
