--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,7 +3,7 @@
     %h1= link_to 'Rubyocracy', root_path
     %ul#header-primary-navigation
       - if user_signed_in?
-        %li= h("Signed in as (#{current_user.name})")
+        %li= h current_user.display_name
         %li= link_to "Your Profile", member_path(current_user)
         %li= link_to "Sign out", destroy_user_session_path
       - else
