--- a/app/views/members/show.haml
+++ b/app/views/members/show.haml
@@ -10,7 +10,7 @@
       %li.stat-respect
         .inner
           %span.name Respect
-          %span.value Unknown
+          %span.value -
       %li.stat-favourites
         .inner
           %span.name Favourites
