--- a/app/views/sites/show.haml
+++ b/app/views/sites/show.haml
@@ -1,2 +1,3 @@
-= render :partial => 'sites/site', :locals => {:site => @site, :full => true}
+%ul.stories#all-sites= render :partial => 'sites/site', :locals => {:site => @site, :full => true}
+
 
