--- a/app/views/stories/_story.haml
+++ b/app/views/stories/_story.haml
@@ -2,7 +2,6 @@
   .story-inner
     %h3
       = link_to h(story.title), [story.site, story], :class => 'story-title'
-    -# = link_to '12 comments', './story.html#comments', :class => 'story-comments'
     .story-vote= story_liked_info story
     %br.clear
     .story-preview= linked_screenshot story
@@ -16,7 +15,7 @@
       .story-meta-container
         %p.story-meta
           Posted on
-          = link_to h(story.site.name), story.site.url
+          = link_to h(story.site.name), story.site
           about <span class='story-posted-at'>#{time_ago_in_words story.posted_at} ago</span>.
         %p.story-favourites
           Favourited by
